--- a/minhacidade-front/public/index.html
+++ b/minhacidade-front/public/index.html
@@ -25,10 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Minha Cidade</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHwCPBIbCBF_DC6KKYY04TsI6qgyTd-J8&libraries=places&callback=initMap"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="path/to/your/bundle.js"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
